--- a/MsSqlDependancyBrowser.csproj
+++ b/MsSqlDependancyBrowser.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
@@ -67,6 +68,8 @@
     <Content Include="SqlScripts\queryObjectDependancies.sql" />
     <Content Include="SqlScripts\queryTableXml.sql" />
     <Content Include="table2html.xslt" />
+    <Content Include="Web\index.html" />
+    <Content Include="Web\postConnectionString.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
