--- a/MsSqlDependancyBrowser.csproj
+++ b/MsSqlDependancyBrowser.csproj
@@ -69,6 +69,7 @@
     <Content Include="SqlScripts\queryTableXml.sql" />
     <Content Include="table2html.xslt" />
     <Content Include="Web\index.html" />
+    <Content Include="Web\main.css" />
     <Content Include="Web\postConnectionString.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
