Trying to add list of all server objects

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ $RECYCLE.BIN/
 /packages/Newtonsoft.Json.10.0.2
 /packages/Newtonsoft.Json.10.0.2
 /packages/Newtonsoft.Json.10.0.2
+.vs/config/applicationhost.config
