All Sql Server request functions are moved to one class Refatoring

--- a/MsSqlDependancyBrowser/MsSqlDependancyBrowser.csproj
+++ b/MsSqlDependancyBrowser/MsSqlDependancyBrowser.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MsSqlDependancyBrowserHttpServer.cs" />
+    <Compile Include="MsSqlRequestService.cs" />
     <Compile Include="RequestMapping.cs" />
     <Compile Include="SimpleHttpServer.cs" />
     <Compile Include="SqlScriptParser.cs" />
@@ -62,6 +63,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
