--- a/MsSqlDepandancyBrowser/MsSqlDepandancyBrowser.csproj
+++ b/MsSqlDepandancyBrowser/MsSqlDepandancyBrowser.csproj
@@ -80,6 +80,7 @@
     <Content Include="table2html.xslt" />
     <Content Include="Web\index.html" />
     <Content Include="Web\main.css" />
+    <Content Include="Web\objectText.html" />
     <Content Include="Web\postConnectionString.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
