--- a/MsSqlDependencyBrowser/MsSqlDependencyBrowser.csproj
+++ b/MsSqlDependencyBrowser/MsSqlDependencyBrowser.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -78,6 +81,7 @@
     <Content Include="SqlScripts\queryObjectInfo.sql" />
     <Content Include="SqlScripts\queryObjectDependancies.sql" />
     <Content Include="SqlScripts\queryTableXml.sql" />
+    <Content Include="SqlScripts\queryObjectTypes.sql" />
     <Content Include="table2html.xslt" />
     <Content Include="Web\index.html" />
     <Content Include="Web\main.css" />
