--- a/MsSqlDependencyBrowser/MsSqlDependencyBrowser.csproj
+++ b/MsSqlDependencyBrowser/MsSqlDependencyBrowser.csproj
@@ -68,6 +68,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Resources\README.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
